# dualsensectl

./: .gitignore  CMakeLists.txt
include/dualsensectl/: Dualsense.h  crc32.h  dualsense.h
src/: Dualsense.c  dualsense.c  main.c
